--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,3 +26,13 @@ services:
             PMA_PORT: 3306
             PMA_USER: admin
             PMA_PASSWORD: password
+
+    redis:
+        image: redis:7
+        restart: always
+        ports:
+            - "6379:6379"
+        environment:
+            - REDIS_PASSWORD=password
+            - REDIS_PORT=6379
+            - REDIS_DATABASES=16
