change SECRET_KEY with a secure string

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Django settings
-SECRET_KEY=django-insecure-uz_tju=ac@09)=qt$4sr=w%g@t)r6lezel4@h8t)yfuxv&(s)p
+SECRET_KEY=2Z-ln#%pVK#-=DoImelRdHPMTH%N8x=$Bb5ge$bF7K4sayPCY_
 DEBUG=True
 
 # MySQL
